add and view comments 05.05

--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/Index.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@using UniversityRating.Presentation.Models.University
+﻿@using Microsoft.AspNetCore.Identity
+@using UniversityRating.Data.Core.DomainModels.Identity
+@using UniversityRating.Presentation.Models.University
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 @{
     ViewData["Title"] = "Index";
@@ -41,7 +45,7 @@
                                                     <div class="col-md-2">
                                                         <p>Chose University</p>
                                                         <select id="university" class="form-control" style="width: 150px">
-                                                           @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
+                                                            @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
                                                             {
                                                                 <option title="@university.Description" value="@university.Id">@university.Name</option>
                                                             }
@@ -75,7 +79,35 @@
                                                 </div>
                                             </form>
                                         </div>
-                                    </div>
+                                        @* --------------------------------------------------------------- *@
+                                        <ul class="media-list">
+                                           @foreach (var comment in Model.CommentUniversityViewModels)
+                                            {
+                                                <li class="media">
+                                                    <a class="pull-left" style="padding-top: 25px">
+                                                        <i class="fas fa-user" style="zoom: 800%"></i>
+                                                    </a>
+                                                    <div class="media-body">
+                                                        <div class="well well-lg">
+                                                            <h4 class="media-heading">
+                                                               @if (User.Identity.IsAuthenticated)
+                                                                {
+                                                                    @User.Identity.Name
+                                                                }
+                                                            </h4>
+                                                            <p> Subject: @comment.Subject</p>
+                                                            <p> Message: @comment.Message</p>
+                                                            <a class="btn btn-primary text-uppercase" id="reply"><span class="glyphicon glyphicon-edit"></span>Modify</a>
+                                                            <a class="btn btn-danger text-uppercase" data-toggle="collapse" href="#replyOne"><span class="glyphicon glyphicon-erase"></span>Delete</a>
+                                                        </div>
+                                                    </div>
+
+                                                </li>
+                                            }
+                                        </ul>
+
+                                            @* ----------------------------------------------- *@
+                                        </div>
 
                                     <div class="container tab-pane fade" id="commentTeacher">
                                         <div class="row" style="padding-top: 50px; padding-bottom: 50px">
@@ -85,7 +117,7 @@
                                                         <p>Chose University</p>
                                                         <select id="universityTeacher" class="form-control" style="width: 150px">
                                                             <option value="0">No University</option>
-                                                           @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
+                                                            @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
                                                             {
                                                                 <option title="@university.Description" value="@university.Id">@university.Name</option>
                                                             }
@@ -124,6 +156,35 @@
                                                 </div>
                                             </form>
                                         </div>
+                                        @* --------------------------------------------------------------- *@
+
+                                        <ul class="media-list">
+                                            @foreach (var comment in Model.CommentTeacherViewModels)
+                                            {
+                                                <li class="media">
+                                                    <a class="pull-left" style="padding-top: 25px">
+                                                        <i class="fas fa-user" style="zoom: 800%"></i>
+                                                    </a>
+                                                    <div class="media-body">
+                                                        <div class="well well-lg">
+                                                            <h4 class="media-heading">
+                                                                @if (User.Identity.IsAuthenticated)
+                                                                {
+                                                                    @User.Identity.Name
+                                                                }
+                                                            </h4>
+                                                            <p> Subject: @comment.Subject</p>
+                                                            <p> Message: @comment.Message</p>
+                                                            <a class="btn btn-primary text-uppercase" id="reply"><span class="glyphicon glyphicon-edit"></span>Modify</a>
+                                                            <a class="btn btn-danger text-uppercase" data-toggle="collapse" href="#replyOne"><span class="glyphicon glyphicon-erase"></span>Delete</a>
+                                                        </div>
+                                                    </div>
+
+                                                </li>
+                                            }
+                                        </ul>
+
+                                        @* ----------------------------------------------- *@
                                     </div>
 
                                     <div id="commentCourse" class="container tab-pane fade">
@@ -133,7 +194,7 @@
                                                     <div class="col-md-2">
                                                         <p>Chose University</p>
                                                         <select class="form-control" style="width: 150px" id="universityCourse">
-                                                           @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
+                                                            @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
                                                             {
                                                                 <option title="@university.Description" value="@university.Id">@university.Name</option>
                                                             }
@@ -171,6 +232,35 @@
                                                 </div>
                                             </form>
                                         </div>
+                                        @* --------------------------------------------------------------- *@
+
+                                        <ul class="media-list">
+                                            @foreach (var comment in Model.CommentCourseViewModels)
+                                            {
+                                                <li class="media">
+                                                    <a class="pull-left" style="padding-top: 25px">
+                                                        <i class="fas fa-user" style="zoom: 800%"></i>
+                                                    </a>
+                                                    <div class="media-body">
+                                                        <div class="well well-lg">
+                                                            <h4 class="media-heading">
+                                                                @if (User.Identity.IsAuthenticated)
+                                                                {
+                                                                    @User.Identity.Name
+                                                                }
+                                                            </h4>
+                                                            <p> Subject: @comment.Subject</p>
+                                                            <p> Message: @comment.Message</p>
+                                                            <a class="btn btn-primary text-uppercase" id="reply"><span class="glyphicon glyphicon-edit"></span>Modify</a>
+                                                            <a class="btn btn-danger text-uppercase" data-toggle="collapse" href="#replyOne"><span class="glyphicon glyphicon-erase"></span>Delete</a>
+                                                        </div>
+                                                    </div>
+
+                                                </li>
+                                            }
+                                        </ul>
+
+                                        @* ----------------------------------------------- *@
                                     </div>
 
                                     <div id="commentCourseTeacher" class="container tab-pane fade">
@@ -181,7 +271,7 @@
                                                         <p>Chose University</p>
                                                         <select class="form-control" style="width: 150px" id="universityCommentCourseTeacher">
                                                             <option value="0">No University</option>
-                                                           @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
+                                                            @foreach (UniversityShowViewModel university in Model.UniversityShowViewModels)
                                                             {
                                                                 <option title="@university.Description" value="@university.Id">@university.Name</option>
                                                             }
@@ -226,10 +316,43 @@
                                             </form>
                                         </div>
 
+                                        @* --------------------------------------------------------------- *@
+
+                                        <ul class="media-list">
+                                            @foreach (var comment in Model.CommentCourseTeacherViewModels)
+                                            {
+                                                <li class="media">
+                                                    <a class="pull-left" style="padding-top: 25px">
+                                                        <i class="fas fa-user" style="zoom: 800%"></i>
+                                                    </a>
+                                                    <div class="media-body">
+                                                        <div class="well well-lg">
+                                                            <h4 class="media-heading">
+                                                               @if (User.Identity.IsAuthenticated)
+                                                                {
+                                                                    @User.Identity.Name
+                                                                }
+                                                            </h4>
+                                                            <p> Subject: @comment.Subject</p>
+                                                            <p> Message: @comment.Message</p>
+                                                            <a class="btn btn-primary text-uppercase" id="reply"><span class="glyphicon glyphicon-edit"></span>Modify</a>
+                                                            <a class="btn btn-danger text-uppercase" data-toggle="collapse" href="#replyOne"><span class="glyphicon glyphicon-erase"></span>Delete</a>
+                                                        </div>
+                                                    </div>
+
+                                                </li>
+                                            }
+                                        </ul>
+
+                                        @* ----------------------------------------------- *@
+
                                     </div>
 
                                 </div>
                             </div>
+
+
+
 
                         </div>
                     </div>
