--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
@@ -120,7 +120,7 @@
                     </li>
 
                     <li class="ach">
-                        <a asp-controller="Course" asp-action="Index">
+                        <a asp-controller="Home" asp-action="Specialties">
                             <i class="pe-7s-science"></i>
                             <p>Specialties</p>
                         </a>
