--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Index.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 <div class="caption text-center">
     <h1>Welcome to University Rating</h1>
     <h3>Choose the Best University</h3>
-    <a class="btn btn-outline-light  btn-lg" asp-controller="Home" asp-action="Universities"> Get Start </a>
+    <a class="btn btn-outline-light  btn-lg" asp-controller="University" asp-action="Index"> Get Start </a>
 </div>
 
 <div id="course" class="offset">
