--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
@@ -112,56 +112,57 @@
                         </a>
                     </li>
 
-                    <li class="ach">
+                    <li>
                         <a asp-controller="Teacher" asp-action="Index">
                             <i class="pe-7s-note2"></i>
                             <p>Teachers</p>
                         </a>
                     </li>
 
-                    <li class="ach">
-                        <a asp-controller="Home" asp-action="Specialties">
-                            <i class="pe-7s-science"></i>
-                            <p>Specialties</p>
-                        </a>
-                    </li>
-
-                    <li class="ach">
+                    <li>
                         <a asp-controller="Mark" asp-action="Index">
                             <i class="pe-7s-like2"></i>
                             <p>Add Mark</p>
                         </a>
                     </li>
 
-                    <li class="ach">
-                        <a asp-controller="Comment" asp-action="Index">
-                            <i class="far fa-comment-dots"></i>
-                            <p>Add Feedback</p>
-                        </a>
-                    </li>
-
-                    <li class="ach">
-                        <a asp-controller="Home" asp-action="Feedback">
-                            <i class="pe-7s-bell"></i>
+                    <li class="nav-item">
+                        <a data-toggle="collapse" data-target="#commentsMenu">
+                            <i class="pe-7s-graph" asp-controller="University" asp-action="Index"></i>
                             <p>Feedback</p>
                         </a>
+                        <ul class="collapse nav" id="commentsMenu">
+                            <li>
+                                <a asp-controller="Comment" asp-action="Index">
+                                    <i class="far fa-comment-dots"></i>
+                                    <p>Add Feedback</p>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a asp-controller="Home" asp-action="Feedback">
+                                    <i class="pe-7s-bell"></i>
+                                    <p>View Feedback </p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
 
-                    <li class="ach">
+                    <li>
                         <a asp-controller="Home" asp-action="User">
                             <i class="pe-7s-user"></i>
                             <p>User Profile</p>
                         </a>
                     </li>
 
-                    <li class="ach">
+                    <li>
                         <a asp-controller="Home" asp-action="About">
                             <i class="pe-7s-news-paper"></i>
                             <p>About</p>
                         </a>
                     </li>
 
-                    <li class="ach">
+                    <li>
                         <a asp-controller="Home" asp-action="Maps">
                             <i class="pe-7s-map-marker"></i>
                             <p>Maps</p>
