--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/EditComment.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Comment/EditComment.cshtml
@@ -1,4 +1,4 @@
-﻿@model UniversityRating.Services.Common.DTOs.Comment.CommentUniversityShowDto
+﻿@model UniversityRating.Presentation.Models.Comment.EditCommentViewModel
 @{
     ViewData["Title"] = "Edit";
 }
@@ -7,18 +7,20 @@
     Layout = null;
 }
 
-<form asp-controller="Comment" asp-action="AddOrEdit" method="post">
+<form asp-controller="Comment" asp-action="EditComment" method="post">
+    <input type="hidden" asp-for="Id"/>
+    <input type="hidden" asp-for="UserId"/>
     <div class="form-group shadow-textarea">
         <textarea asp-for="Subject" class="form-control z-depth-1" id="subjectCommentUniversity" rows="2" placeholder="Write subject here..."></textarea>
     </div>
-    
+
     <div class="form-group">
         <label for="exampleFormControlTextarea3">Comment</label>
         <textarea asp-for="Message" class="form-control" id="messageCommentUniversity" rows="8"></textarea>
     </div>
-    
+
     <div class="form-group">
-        <input type="submit" value="Submit" class="btn btn-primary" />
-        <input type="reset" value="Reset" class="btn" />
+        <input type="submit" value="Submit" class="btn btn-primary"/>
+        <input type="reset" value="Reset" class="btn"/>
     </div>
 </form>
